kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyform-service
spec:
  selector:
    app: pyform
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP
